--- a/css/index.css
+++ b/css/index.css
@@ -10,7 +10,9 @@ body{
 
 .section {
     padding: 30px 0px;
-    /* border: 1px solid red; */
+    display: flex;
+    flex-wrap:wrap ;
+    border: 1px solid red;
     /* height: 300px; */
 
     .bor {
@@ -218,4 +220,12 @@ body{
         }
     }
 }
+}
+
+@media only screen and (max-width: 600px) {
+    .about-img {
+        margin: 0 auto;
+        width: 150px;
+    }
+
 }
